complete basic read/write/indicate/notify wrap logic and almost complete demo

--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -35,6 +35,11 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+    <EditText
+        android:id="@+id/etWrite"
+        android:hint="write bytes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
         android:layout_weight="1"
         android:id="@+id/scan_results"
