complete descriptor read and write demo

--- a/app/src/main/res/layout/item_connect_c.xml
+++ b/app/src/main/res/layout/item_connect_c.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="20dp"
     android:orientation="vertical">
 
     <TextView
@@ -13,12 +14,6 @@
 
     <TextView
         android:id="@+id/scan_line2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/scan_line3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp" />
