--- a/app/src/main/res/layout/item_connect_descrptor.xml
+++ b/app/src/main/res/layout/item_connect_descrptor.xml
@@ -2,25 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="30dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/scan_line1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/scan_line2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/scan_line3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="13sp" />
 
 </LinearLayout>
