--- a/sample/src/main/res/layout/activity_connect.xml
+++ b/sample/src/main/res/layout/activity_connect.xml
@@ -40,7 +40,7 @@
         android:hint="write bytes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_weight="1"
         android:id="@+id/scan_results"
         android:layout_width="match_parent"
